@@ -839,3 +839,9 @@ BODY_ANIMAL = 3
 BODY_HUMAN = 4
 
 MAX_TITHING_POINTS = 100000 # Maximum amount of tithing points
+
+PLAYER_BODIES_ALIVE = [ 0x190, 0x191, 0x25d, 0x25e ]
+PLAYER_BODIES_DEAD = [ 0x192, 0x193, 0x25f, 0x260 ]
+PLAYER_BODIES_ALL = PLAYER_BODIES_ALIVE + PLAYER_BODIES_DEAD + [ 0x3db ]
+PLAYER_BODIES_ALIVE_MALE = [ 0x190, 0x25d ]
+PLAYER_BODIES_ALIVE_FEMALE = [ 0x191, 0x25e ]
